# hackathon-todo

backend/: main.py  pyproject.toml  requirements.txt
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  todos.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  chat.py  revoked_token.py  todo.py  user.py
backend/app/schemas/: auth.py  chat.py  todo.py
frontend/app/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/signup/: page.tsx
frontend/lib/: api.ts  auth.ts
